Fri 16 lip 2004 15:37:41 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o added Slider widget
	o removed some obsolete code from editor
	o added ScriptObject - hidden script container

Thu 15 Jul 2004 23:22:33 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o added TextBrowser widget for rich text viewing, with clickable 
	  links
	o in @forEach, not only @var, but @var_index and @var_count are
	  expanded (first to index of current item, second to item count)
	o fixed version number in Editor

Wed 14 Jul 2004 12:22:33 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o added @String.args (based on Qt QString("%1").arg()
	o support parameters in function browser

Tue 13 lip 2004 22:33:19 CEST
	o added support for internationalizatiof Kommander dialogs
	o added @i18n special for marking strings for translation

Tue 13 Jul 2004 13:33:00 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o function browser: support for nested functions
	o function browser: properly prefix function groups with @
	o function browser: add information about obligatory and optional
	  parameters.
	o function browser: add clear button
	o Kommander Text Editor: change buttons order

Tue 13 Jul 2004 01:10:34 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o added function browser for editor

Sat 10 Jul 2004 15:51:07 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o forEach(variable, list) function for internal loops
	o for(variable, start, end, [step]) function for internal loops
	o Kommander 1.0alpha7 released

Fri 09 Jul 2004 17:39:43 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o TreeWidget optimized - it should be much faster for big trees now
	o fixed bug in TreeWidget findItem function

Thu 09 Jul 2004 13:27:47 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o StatusBar widget added
	o ProgressBar widget added
	o widgets icons updated
	o removed obsolete ListView widget

Tue 06 Jul 2004 10:12:44 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o bug fixed: calling @dcop with parameterless functions